--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,7 @@ add_library (dispatch
 include_directories (${dispatch_SOURCE_DIR}/../leplib/src)
 
 if(CMAKE_HOST_WIN32)
-    target_link_libraries(dispatch ${target_link_libraries} leplib ws2_32)
+    target_link_libraries(dispatch ${target_link_libraries} lep ws2_32)
 endif(CMAKE_HOST_WIN32)
 
 if(CMAKE_HOST_UNIX)
